# rc_backhoe_ros

./: .gitlab-ci.yml  Dockerfile  README.md  docker_start.sh
rc_backhoe_control/: CMakeLists.txt  package.xml
rc_backhoe_control/config/: rc_backhoe_trajectory_controller.yaml
rc_backhoe_control/include/rc_backhoe_control/: rc_backhoe_hw.h
rc_backhoe_control/scripts/: joint_trajectory_publisher_test.py  joy_stick_ctl.py  keyboard_ctl.py
rc_backhoe_control/src/: rc_backhoe_control.cpp  rc_backhoe_hw.cpp
rc_backhoe_description/: CMakeLists.txt  package.xml  robot_hw_sim_plugins.xml
rc_backhoe_description/include/rc_backhoe_description/: rc_backhoe_hw_sim.h
rc_backhoe_description/launch/: display.launch  gazebo.launch  rc_backhoe_sim.launch
rc_backhoe_description/src/: rc_backhoe_hw_sim.cpp  rc_backhoe_retrofit_model.cpp
rc_backhoe_description/test/: gazebo.test
rc_backhoe_description/urdf/: rc_backhoe.xacro
rc_backhoe_driver/: CMakeLists.txt  package.xml
rc_backhoe_driver/arduino/mpu6050_ros_publisher/: mpu6050_ros_publisher.ino
rc_backhoe_driver/arduino/rc_control/: rc_control.ino
rc_backhoe_driver/arduino/test_code/multi_imu_test/: multi_imu_test.ino
rc_backhoe_driver/arduino/test_code/one_imu_test/: one_imu_test.ino
rc_backhoe_driver/arduino/test_code/switch_test/: switch_test.ino
rc_backhoe_driver/launch/: bring_up.launch
rc_backhoe_moveit/: .setup_assistant  CMakeLists.txt  package.xml
rc_backhoe_moveit/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  rc_backhoe.srdf  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
rc_backhoe_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_hw.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  rc_backhoe_moveit_config.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
rc_backhoe_ros/: CMakeLists.txt  package.xml
rc_backhoe_ros/launch/: bag_pose_estimation.launch  pose_estimation.launch  pose_estimation_gazebo.launch  rc_backhoe_moveit_control.launch  remote.launch
rc_backhoe_ros/sample_data/imu/: rc_backhoe_down_limit.bag  rc_backhoe_up_limit.bag
rc_backhoe_ros/scripts/: get_fk.py
rc_backhoe_ros/src/: bucket_end_pose_from_base.cpp  moveit_commander_bucket_end.cpp
rc_backhoe_ros/test/: rc_bachoe_moveit_joint_planner.py  rc_backhoe_moveit_cmd.test
rc_backhoe_state/: CMakeLists.txt  package.xml
rc_backhoe_state/scripts/: backhoe_state_publisher.py  dummy_state_publisher.py  imu_msg_converter.py  joint_publisher_from_imu.py
